--- a/memoria/contido/metodologia_y_gestion_del_proyecto.tex
+++ b/memoria/contido/metodologia_y_gestion_del_proyecto.tex
@@ -30,7 +30,7 @@ Se llevaron a cabo las tareas de la 15 a la 18. En este sprint, nos encontramos 
 En este sprint se ejecutaron las tareas 19 a 21, centradas en el desarrollo de una alternativa a Exposure Render. Después de varios intentos fallidos de integrar el sistema de seguimiento en Exposure Render durante varias semanas, se decidió descartar esta opción debido a incompatibilidades técnicas y limitaciones en la integración. En su lugar, se diseñó e implementó una solución utilizando un motor de render independiente basado en OpenGL. Se llevaron a cabo pruebas exhaustivas para validar el funcionamiento del sistema y se ajustaron los parámetros necesarios para asegurar una ejecución óptima y estable.
 
 \section{Planificación temporal}
-La planificación temporal del proyecto se organizó en sprints de duración variable, adaptándose a la complejidad de las tareas y los riesgos identificados. La \tablename~\ref{tab:tareas_completa} presenta el detalle de todas las tareas llevadas a cabo, y el sprint en el que se desarrollaron. El diagrama de Gantt completo con la distribución temporal detallada de todas las tareas se puede consultar en la \tablename~\ref{fig:gantt_completo}.
+La planificación temporal del proyecto se organizó en sprints de duración variable, adaptándose a la complejidad de las tareas y los riesgos identificados. La \tablename~\ref{tab:tareas_completa} presenta el detalle de todas las tareas llevadas a cabo, y el sprint en el que se desarrollaron. El diagrama de Gantt completo con la distribución temporal detallada de todas las tareas se puede consultar en la \figurename~\ref{fig:gantt_completo}.
 
 \begin{table}
   \centering
