--- a/memoria/memoria_tfg.tex
+++ b/memoria/memoria_tfg.tex
@@ -26,6 +26,7 @@
                          % a "tablas" e "índice de tablas" respectivamente
 
 \usepackage{estilo_tfg}
+\newcommand{\srccode}[1]{{\ttfamily\footnotesize #1}}
 
 % Lista de paquetes potencialmente interesantes (uso baixo demanda)
 
